Deploy sticky widget z-index bug fix

--- a/src/styles/components/_catalogue.scss
+++ b/src/styles/components/_catalogue.scss
@@ -76,7 +76,7 @@
           justify-content: flex-end;
           border-radius: 20px;
           height: 500px;
-          z-index: 10;
+          z-index: 1;
           overflow: hidden;
 
           @media (min-width: vars.$lg) and (max-width: vars.$xxl) {
