--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -4,195 +4,194 @@
 @use '../utils/functions' as fn;
 
 .cta-4 {
-    font-family: "Poppins";
-    margin-block: 60px;
+  font-family: 'Poppins';
+  margin-block: 60px;
+
+  @media (max-width: vars.$md) {
+    margin-block: 32px 64px;
+  }
+
+  &__content {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    padding: 100px 60px;
+    color: var(--clr-cta);
+    border-radius: 20px;
+    background: linear-gradient(90deg, #6ceabd 0%, #1a1b1f 100%);
+
+    @media (max-width: vars.$xl) {
+      padding: minmax(24px, 48px) max(12px, 24px);
+    }
+
+    @media (max-width: vars.$lg) {
+      padding: 40px 16px;
+      z-index: 1;
+    }
 
     @media (max-width: vars.$md) {
-        margin-block: 32px 64px;
+      height: 506px;
+      background: url('../../assets/images/cta-2.png');
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
-    &__content {
-        position: relative;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        padding: 100px 60px;
-        color: var(--clr-cta);
-        border-radius: 20px;
-        background: linear-gradient(90deg, #6CEABD 0%, #1A1B1F 100%);
+    @media (max-width: vars.$sm) {
+      background-position: 0% 100%;
+    }
 
-        @media (max-width: vars.$xl) {
-            padding: minmax(24px, 48px) max(12px, 24px);
-        }
+    &-inner {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+      max-width: 630px;
+      height: 100%;
 
-        @media (max-width: vars.$lg) {
-            padding: 40px 16px;
-        }
+      @media (max-width: vars.$md) {
+        gap: 0;
+        justify-content: space-between;
+      }
+    }
+  }
+
+  &__img {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    right: 0;
+
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+
+    @media (max-width: vars.$md) {
+      position: static;
+      display: none;
+    }
+
+    &-wrap {
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      right: 0;
+
+      width: 45%;
+      height: 100%;
+      border-radius: 20px;
+
+      @media (max-width: vars.$md) {
+        position: static;
+        display: none;
+      }
+    }
+  }
+
+  &__text-block {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @media (max-width: vars.$md) {
+      width: 100%;
+      display: flex;
+      gap: 12px;
+    }
+  }
+
+  &__title {
+    width: 20ch;
+    color: #222222;
+
+    @media (max-width: vars.$xl) {
+      width: 15ch;
+    }
+
+    @media (max-width: vars.$lg) {
+      width: 20ch;
+      font-size: 28px;
+      line-height: 36px;
+      letter-spacing: -0.02em;
+    }
+
+    @media (max-width: vars.$md) {
+      width: auto;
+    }
+  }
+
+  &__title-block {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 12px;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 46px;
+
+    @media (max-width: vars.$md) {
+      width: 100%;
+    }
+  }
+
+  &__desc {
+    width: 43ch;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    opacity: 0.800000011920929;
+    color: #222222;
+
+    @media (max-width: vars.$xl) {
+      width: 35ch;
+    }
+
+    @media (max-width: vars.$lg) {
+      font-size: 16px;
+      line-height: 24px;
+    }
+
+    @media (max-width: vars.$md) {
+      width: 100%;
+    }
+  }
+
+  &__btn-block {
+    display: block;
+    max-width: 285px;
+
+    @media (max-width: vars.$md) {
+      max-width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: auto;
+    }
+
+    & > a {
+      display: flex;
+      background-color: #222222;
+      padding: 14px 32px;
+      color: var(--clr-white);
+      border-radius: 10px;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 24px;
+      justify-content: space-between;
+
+      & > svg {
+        width: 24px;
+        height: 24px;
 
         @media (max-width: vars.$md) {
-            height: 506px;
-            background: url('../../assets/images/cta-2.png');
-            background-repeat: no-repeat;
-            background-size: cover;
+          margin-left: 4px;
         }
+      }
 
-        @media (max-width: vars.$sm) {
-            background-position: 0% 100%;
-        }
-
-        &-inner {
-            display: flex;
-            flex-direction: column;
-            gap: 32px;
-            max-width: 630px;
-            height: 100%;
-
-            @media (max-width: vars.$md) {
-                gap: 0;
-                justify-content: space-between;
-            }
-        }
-    }
-
-    &__img {
-        position: absolute;
-        z-index: -1;
-        top: 0;
-        right: 0;
-
+      @media (max-width: vars.$md) {
         width: 100%;
-        height: 100%;
-        border-radius: 20px;
-
-        @media (max-width: vars.$md) {
-            position: static;
-            display: none;
-        }
-
-        &-wrap {
-            position: absolute;
-            z-index: -1;
-            top: 0;
-            right: 0;
-
-            width: 45%;
-            height: 100%;
-            border-radius: 20px;
-
-            @media (max-width: vars.$md) {
-                position: static;
-                display: none;
-            }
-        }
+        padding: 8px 10px;
+        justify-content: center;
+      }
     }
-
-    &__text-block {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-        @media (max-width: vars.$md) {
-            width: 100%;
-            display: flex;
-            gap: 12px;
-        }
-    }
-
-    &__title {
-        width: 20ch;
-        color: #222222;
-
-        @media (max-width: vars.$xl) {
-            width: 15ch;
-        }
-
-        @media (max-width: vars.$lg) {
-            width: 20ch;
-            font-size: 28px;
-            line-height: 36px;
-            letter-spacing: -.02em;
-        }
-
-        @media (max-width: vars.$md) {
-            width: auto;
-        }
-
-    }
-
-    &__title-block {
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-        gap: 12px;
-        font-weight: 400;
-        font-size: 36px;
-        line-height: 46px;
-
-        @media (max-width: vars.$md) {
-            width: 100%;
-        }
-    }
-
-    &__desc {
-        width: 43ch;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 30px;
-        opacity: 0.800000011920929;
-        color: #222222;
-
-        @media (max-width: vars.$xl) {
-            width: 35ch;
-        }
-
-        @media (max-width: vars.$lg) {
-            font-size: 16px;
-            line-height: 24px;
-        }
-
-        @media (max-width: vars.$md) {
-            width: 100%;
-        }
-
-    }
-
-    &__btn-block {
-        display: block;
-        max-width: 285px;
-
-        @media (max-width: vars.$md) {
-            max-width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: auto;
-        }
-
-        &>a {
-            display: flex;
-            background-color: #222222;
-            padding: 14px 32px;
-            color: var(--clr-white);
-            border-radius: 10px;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 24px;
-            justify-content: space-between;
-
-            &>svg {
-                width: 24px;
-                height: 24px;
-
-                @media (max-width: vars.$md) {
-                    margin-left: 4px;
-                }
-            }
-
-            @media (max-width: vars.$md) {
-                width: 100%;
-                padding: 8px 10px;
-                justify-content: center;
-            }
-        }
-    }
+  }
 }
