--- a/src/styles/components/_products.scss
+++ b/src/styles/components/_products.scss
@@ -92,10 +92,22 @@
         font-weight: 400;
         line-height: 20px;
         letter-spacing: 0.14px;
-        background-image: url('../../assets/images/arrow-down.svg');
+        background-image: url('../../assets/images/select-arrow-down.svg');
         background-size: 16px;
         background-repeat: no-repeat;
         background-position: calc(100% - 16px) center;
+
+        &.active {
+          background-image: url('../../assets/images/select-arrow-up.svg');
+        }
+
+        & > option {
+          background-color: var(--clr-dark);
+
+          &:where(:not(:last-child)) {
+            margin-bottom: 16px;
+          }
+        }
       }
 
       @media (max-width: vars.$lg) {
