--- a/src/styles/components/_sticky-widget.scss
+++ b/src/styles/components/_sticky-widget.scss
@@ -16,7 +16,7 @@
   padding: 4px;
   gap: 4px;
   border-radius: 10px;
-  z-index: 1;
+  z-index: 2;
 
   @media (max-width: vars.$lg) {
     flex-direction: row;
